mama comba trans

--- a/_keywords/excerpts/d0286.md
+++ b/_keywords/excerpts/d0286.md
@@ -1,5 +1,5 @@
 # Summary   
-An enslaved man named Pierrot was sold to enslaver Michèl Brosset by Claude Boisson ("*tailladier en cette ville*," tool maker in this city) and his wife, Magdelaine Chenier, who had acquired Pierrot as a *piece d'inde* from the Company of the Indies[^i]. However, Pierrot went missing after having gone maroon. Boisson and Chenier promise to catch Pierrot for Brosset in exchange for cash upon delivery, which they succeed in accomplishing.   
+An enslaved man named Pierrot was sold to enslaver Michèl Brosset by Claude Boisson ("*tailladier en cette ville*," tool maker in this city) and his wife, Magdelaine Chenier, who had acquired Pierrot as a *piece d'inde* from the Company of the Indies.[^i] However, Pierrot went missing after having gone maroon. Boisson and Chenier promise to catch Pierrot for Brosset in exchange for cash upon delivery, which they succeed in accomplishing.   
    
 [Transcription](#transcription-french-diplomatic)  
 [Translation](#translation-english-modern)  
@@ -71,7 +71,7 @@ Libre possession sain que pour Raison du
 Il puisse estre Inquieté dequi queue___  
 passeestre generallement quelonquisde  
 promettant Lesd Vendeurs le garantis  
-et Indeminise Envers et Contre tous qsup>l</sup>  
+et Indeminise Envers et Contre tous q<sup>l</sup>  
 appartiendra aussy q<sup>l</sup>  a eté Convenu    
 Entre les parties Car ainsy promet  
 oblig<sup>[eant]</sup> Renon<sup>[çant]</sup> fait et Passé   
@@ -166,8 +166,7 @@ to pay him in cash upon delivery of the said nègre by means of which these proc
       
  (11690)  
    
-Having appeared in the ministerial office, Sieur Claude Boisson and Magdelaine Chenier, his wife, whom are appreciative [of the council] and avow [on] this day today [to have] received money in our presence [of] the sum of fifteen hundred livres brought [forth] in the above [stated] sale. As [of] that, the said Sieur Brosset [also] recognized having had received the aforesaid nègre by means of which the aforementioned Sieur Brosset [shall] retain free  
-and clear the possession of the aforesaid slave without which, for any reason, it may be possibly be disturbed as it is generally [understood under the law] [and as] which as it has been agreed, thus, the promisee [party] obliges and forswears. [It was] done and passed [on] the twenty-fourth of September one thousand seven hundred thirty- nine [in the] presence of the gentlemen François Roumier and François Jahan, witnesses, residing there [in the city] and the aforesaid Boisson and his wife, declaring not knowing how to write nor sign of [which has been] inquired, in accordance with the law.   
+Having appeared in the ministerial office, Sieur Claude Boisson and Magdelaine Chenier, his wife, whom are appreciative [of the council] and avow [on] this day today [to have] received money in our presence [of] the sum of fifteen hundred livres brought [forth] in the above [stated] sale. As [of] that, the said Sieur Brosset [also] recognized having had received the aforesaid nègre by means of which the aforementioned Sieur Brosset [shall] retain free and clear the possession of the aforesaid slave without which, for any reason, it may be possibly be disturbed as it is generally [understood under the law] [and as] which as it has been agreed, thus, the promisee [party] obliges and forswears. [It was] done and passed [on] the twenty-fourth of September one thousand seven hundred thirty- nine [in the] presence of the gentlemen François Roumier and François Jahan, witnesses, residing there [in the city] and the aforesaid Boisson and his wife, declaring not knowing how to write nor sign of [which has been] inquired, in accordance with the law.   
     
 [Signed:] [François] Roumier [Rubric, Roumier]  
 [Signed:] [François] Jahan  
