--- a/_keywords/excerpts/d0326.md
+++ b/_keywords/excerpts/d0326.md
@@ -13,7 +13,7 @@ Two free Black women, Genoveva Junon and Maria Juana, arbitrate the sale and pos
   
 [Marginalia:]   
   
-27 no<sup>bre<sup> 1770  
+27 no<sup>bre</sup> 1770  
   
 Venta  
   
@@ -118,7 +118,7 @@ propiedad y possession Le da por entregrada a
   
 [Cuerpo:]  
   
-                                     20</p>  
+                                     20  
   
 Su voluntad, y anuncio las Leyes De La Entrega  
 ê prueba ê por esta Seobliga de pagar a La dhâ  
@@ -188,8 +188,7 @@ Maria Juana,
 [Body:]  
   
 In the City of New Orleans on November   
-twenty-seven, seventeen-hundred and seventy, before  the notary public for the city, Genoveva Junon, *negra libre,* homeowner of this city, I state that I grant that which is to be sold in perpetuity to Maria Juana, *negra libre* and also homeowner of this city, and to whom rights are drawn-out, [for] thirty feet of  *un solar* of building frontage on which can be placed stalls on St. Ursuline Ave., bordered on one side by the granter [Junon] and on the other land [belonging] to the succession of the deceased *Don* Joseph des Rouissoux, with all its mores and easements and everything else that belongs to it, to hold *de facto* and *de jure*, free of estate tax, *hypothèque*[^ii]] or other  seigneurial charge, nor special or general obligation, and [that] portability is assured for the price of fifty *pesos* *fuertes* [or one *real de a ocho*], of which amount I have been paid twenty-five *pesos* in cash, and the twenty-five remaining [*pesos*] debt will be paid to me on the twenty-seventh of November seventeen-hundred and seventy-one, by which is satisfied, with the committed twenty-five *pesos*, and I make notice, [according] to the non-numerary pecuniary laws [of succession], proof of surrender, and grant receipt in [customary] form, and declare that the just value of the *solar* is the said fifty *pesos,* of which [obligations]  
-are contracted regardless of form and quantity, as it pleases the aforesaid buyer, and [is] placed into living trust [for any legitimate beneficiaries] with [quitclaim] deed of surrender according to the law [as set forth under] the Royal Ordinance of *Alcalá*  
+twenty-seven, seventeen-hundred and seventy, before  the notary public for the city, Genoveva Junon, *negra libre,* homeowner of this city, I state that I grant that which is to be sold in perpetuity to Maria Juana, *negra libre* and also homeowner of this city, and to whom rights are drawn-out, [for] thirty feet of  *un solar* of building frontage on which can be placed stalls on St. Ursuline Ave., bordered on one side by the granter [Junon] and on the other land [belonging] to the succession of the deceased *Don* Joseph des Rouissoux, with all its mores and easements and everything else that belongs to it, to hold *de facto* and *de jure*, free of estate tax, *hypothèque*[^ii]] or other  seigneurial charge, nor special or general obligation, and [that] portability is assured for the price of fifty *pesos* *fuertes* [or one *real de a ocho*], of which amount I have been paid twenty-five *pesos* in cash, and the twenty-five remaining [*pesos*] debt will be paid to me on the twenty-seventh of November seventeen-hundred and seventy-one, by which is satisfied, with the committed twenty-five *pesos*, and I make notice, [according] to the non-numerary pecuniary laws [of succession], proof of surrender, and grant receipt in [customary] form, and declare that the just value of the *solar* is the said fifty *pesos,* of which [obligations] are contracted regardless of form and quantity, as it pleases the aforesaid buyer, and [is] placed into living trust [for any legitimate beneficiaries] with [quitclaim] deed of surrender according to the law [as set forth under] the Royal Ordinance of *Alcalá*  
   
 —[Rubric, Forstall]—  
   
@@ -243,5 +242,5 @@ For Maria Juana,
 
 [^i]: A *solar* is the Spanish colonial term for an allotment of land that has not yet been built upon. The expectation was that the lot would be built or improved upon, and was usually a condition of rental or sale. If construction did not take place within a specific period of time the owner could lose their rights to the *solar*. The term evolved in Cuba to also mean a “shantytown” dwelling, usually within an urban place.  
   
-[^ii]: Under the French colonial system of property law, an *hypothèque* was a debt instrument which allowed the owner of a property to collateralize their assets in order to secure a loan. While similar to an English mortgage, the *hypothèque *remained legally distinct. The title of collateral of the *hypothèque *belonged to the borrower, not to the lender, and *liens *were placed solely on *biens immeubles*, or immovable property. Accordingly, enslaved people were classified as *biens meubles*, or movable property, and could not be seized from an enslaver for defaulting on the *hypothèque *agreement. For more on this system, see Gregory Smaldone, "Don't Call it a Mortgage: The Perils of Translation in Early Modern Economy," *Age of Revolutions *(October 9, 2023), and in French Louisiana specifically, Vernon Palmer, “The Origins and Authors of the Code Noir,” *Louisiana Law Review *56, no. 2 (Winter 1996): 363-407.  
+[^ii]: Under the French colonial system of property law, an *hypothèque* was a debt instrument which allowed the owner of a property to collateralize their assets in order to secure a loan. While similar to an English mortgage, the *hypothèque *remained legally distinct. The title of collateral of the *hypothèque* belonged to the borrower, not to the lender, and *liens *were placed solely on *biens immeubles*, or immovable property. Accordingly, enslaved people were classified as *biens meubles*, or movable property, and could not be seized from an enslaver for defaulting on the *hypothèque* agreement. For more on this system, see Gregory Smaldone, "Don't Call it a Mortgage: The Perils of Translation in Early Modern Economy," *Age of Revolutions* (October 9, 2023), and in French Louisiana specifically, Vernon Palmer, “The Origins and Authors of the Code Noir,” *Louisiana Law Review* 56, no. 2 (Winter 1996): 363-407.  
 
