--- a/_keywords/excerpts/d0207.md
+++ b/_keywords/excerpts/d0207.md
@@ -18,7 +18,7 @@ Comba
     
 [Corps:]  
     
-N.^o 1835 Du 4. 7.^bre 1764  
+N.^o 1835 Du 4. 7.<sup>bre</sup> 1764  
 Interrogatoire fait par nous Conseiller Commissaire   
 En Cette partie a La Requette du procureur General   
 Du Roy et En Vertu de L'ordonnance de Monsieur  
@@ -161,6 +161,75 @@ Et ÿ a persisté et Na Sçu Signer
 [Signé:] Fazende     [Signé:] Garic, Greffier  
       
 ## Translation (English, modern)  
+  
+   
+[page # 1] [digital 3]  
+    
+
+[Marginal note:]  Pre-paid  
+[Rubric, Foucault]  
+September 4, 1764  
+Interrogation  
+of the *négresse*   
+Comba  
+    
+[Body:]  
+    
+No. 1835 of September 4, 1764  
+Interrogation made for the Advisor Commissioner in the petition of request by the Advisor General of the King and in virtue of the order of Mr. D'Abbadie, of the *négresse* named Comba against the *nègre* named Louis, detained in prisonin this city as follows:  
+  
+Taken from the prison, the *négresse*, named Comba, stays at *l'Hôpital des Pauvres* [Charity Hospital]. After taking her oath, she says she will speak truth when questioned by us, as follows:  
+  
+Questioned of her name, age, and her residence, she said she is called Julie, otherwise Comba, aged fifty years, of the Mandinga Nation, living in Charity Hospital.  
+  
+Questioned if she knows the named Louis, or Foÿ, she said that she has known him since he has been in this country here, and not before.  
+  
+Questioned since when she had not seen the said Louis, she said not to have seen him for two months, because she has been placed in prison.  
+  
+Questioned how she knows Louis, she said after Louis left Illinois, she was accustomed to go to see Louison at Cantrelle's garden. One day, she was visiting and found there to be many Bambara *nègres* [there]. That they had a very good time, then the *négresse*, Louison, went to look for her another time.  
+              
+[Signed:] Fazende     [Signed:] Garic, Notary  
+   
+   
+[p. # 2] [dig.4]  
+   
+
+That she returned there, and that she found the *nègre*, Louis, that they suppered there together with the *négresse* named Fatima, belonging to Mr. de Lafreniere, who had prepared the supper. She then told Louis what was he doing there, that he was a maroon, that Louis told her that he had come with his mistress from Illinois, that he is not a maroon. That she asked how he earned a living since he does not work, that the said Louis, he said his mistress let him live free because he has a leg injury, and until he was cured, only to eat what there was no shortage of, that he found around the city. He said that the said Louison had permission from her master for the supper, where they only ate pork which belonged to the *négresse*, Louison.  
+  
+Asked if they were several, she said they were several but she does not know how many.  
+  
+Asked if she ever saw the said Louis at the Hospital for the Poor, she said he had been there many times.  
+  
+Asked if the *nègre*, Louis, had not slept with her in her cabin, she said that yes, that he had slept there, that she did not know that he was a maroon.  
+  
+Asked if she had given him some gumbo with Cézar and another *négresse*, she said it is true, they were four, that Cézar gave Louis fifty *sols* [money] to go find the *filet* [of alcohol] that he went [to get it], and they all drank together.  
+         
+[Signed:] Fazende     [Signed:] Garic, Notary  
+  
+  
+[p. #3] [dig.5]  
+  
+  
+Asked if Louis had not given her a *carotte* [small amount] of tobacco, she said that yes he gave her some but that he took it back, having stolen ten along with some cotton linen, from which he made shirts and pants. This he did not hide. He sewed in front of the door of Charity Hospital, that she had given him the sewing needles.  
+  
+When asked if she knew if Louis had stolen from anywhere else, she said she knew that Louis had stolen clothes from the *négresse* of *Sieur* Baschemin, but that he had then sold the clothes, but not the money that he had also stolen, that he had used to get *tafia* [Creole rum].  
+  
+Questioned if she knew if Louis had stolen a pig from the Jesuits, she said it was true Louis had killed the pig, but that this pig was so big he could not get it over the palisade.That he and Cézar shared it, and each passed their portion over the palisade. And Louis went to sell his share at the bayou. Of what was left, Louis gave him a piece that they ate together, the both of them.  
+  
+Questioned if she did not know that the *nègre*, Louis, had stolen from the home of the Lady D'Anville, she said that she saw the washing in the ditch, and a lot of clothes drying in the garden of *Sieur* Cantrelle. She asked Louison if she had done the washing, the she had said no, that it was the clothing of the *nègre*, Louis, but that the clothes   
+[Signed:] Fazende      [Signed:] Garic, Notary  
+  
+  
+[p. #4] [dig.6]  
+  
+
+were never to be brought to her home.  
+   
+Questioned if she knew that the *nègre*, Louis, was often sleeping at the  home or garden of Cantrelle, she said since Louis came from Illinois, he sleeps in the said cabin or at her place. That he had slept there many times, that is everything to her knowledge, she said. The present interrogatory was read back to her she said she understood it, her answers contained the truth, persisted in this, and did not know how to sign.  
+   
+   
+[Signed:] Fazende     [Signed:] Garic, Notary  
+  
 ## Notes    
   
 [^i]: Employing *pièce d’Inde* reduced Africans to a measurement of commercial exchange, in an attempt to erase their humanity. In September 1721, French officials established the exchange rate of *pièce d’Inde* in Louisiana at 660 *livres*, the price at which this unnamed woman was purchased in 1722 or 1723. B. F. French, *Historical Collections of Louisiana and Florida* (New York: J. Sabin & Sons, 1869), 3: 101-3. For more on *pièce d’Inde* and gender, see Jessica Marie Johnson, *Wicked Flesh: Black Women, Intimacy, and Freedom in the Atlantic World* (Philadelphia: University of Pennsylvania Press, 2020), 77-120.    
